Put and Delete routes added
